--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="tringle-x" />
+    <meta name="author" content="tringle-x" />
+    <meta name="description" content="me when the tringle-x" />
     <title>triangle.x</title>
     <link rel="stylesheet" href="style.css">
 </head>
