--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="tringle-x" />
-    <meta name="author" content="tringle-x" />
-    <meta name="description" content="me when the tringle-x" />
+    <meta name="title" content="tringle.x" />
+    <meta name="author" content="tringle.x" />
+    <meta name="description" content="me when the tringle.x" />
     <title>triangle.x</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img class="bg" src="https://thumbs.gfycat.com/MarriedDelayedAplomadofalcon-size_restricted.gif">
+
     <h1 class="title">
-        vonkii
+        vonchyy
+    </h1>
+
+    <h1 class="funy">
+        i make the stupidest shit you can imagine
     </h1>
 </body>
 </html>
